--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon server.js",
-    "start": "node server.js"
+    "build": "echo 'No build step needed'", 
+    "start": "node src/server.js" 
   },
   "type": "module",
   "keywords": [],
