--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon server.js",
     "build": "echo 'No build step needed'", 
-    "start": "node src/server.js" 
+    "start": "node server.js" 
   },
   "type": "module",
   "keywords": [],
